--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         );
         const Sparkles = ({ size = 24, className = "" }) => (
             <svg xmlns="http://www.w3.org/2000/svg" width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className={className}>
-                <path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"/>
+                <path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L12 3Z"/>
             </svg>
         );
         const Copy = ({ size = 16, className = "" }) => (
@@ -176,17 +176,14 @@
                 if (savedCounters) {
                     setMonthlyCounters(JSON.parse(savedCounters));
                 }
-                const savedKey = localStorage.getItem('geminiApiKey');
-                if (savedKey) {
-                    setUserApiKey(savedKey);
-                }
+                // LOGIC API KEY OTOMATIS DIHAPUS AGAR MANUAL INPUT
             }, []);
 
             // --- FUNGSI AI CHAT (Direct Gemini) ---
             const handleSaveApiKey = (e) => {
                 const key = e.target.value;
                 setUserApiKey(key);
-                localStorage.setItem('geminiApiKey', key);
+                // TIDAK DISIMPAN KE LOCALSTORAGE (Sesi Saja)
             };
 
             const callGeminiChat = async () => {
@@ -524,7 +521,7 @@
                                 {/* TAB 2: KONSULTASI AI (DIRECT CHAT) */}
                                 {aiTab === 'consult' && (
                                     <div className="space-y-4 h-full flex flex-col">
-                                        {!userApiKey && (
+                                        {!userApiKey ? (
                                             <div className="bg-orange-50 border border-orange-200 text-orange-800 text-xs p-3 rounded-lg mb-2">
                                                 <p className="font-bold mb-1">Butuh API Key Gemini</p>
                                                 <p className="mb-2">Untuk konsultasi langsung, masukkan API Key Anda (gratis dari Google).</p>
@@ -533,8 +530,22 @@
                                                     placeholder="Paste API Key disini..."
                                                     className="w-full p-2 border rounded text-xs bg-white"
                                                     onChange={handleSaveApiKey}
+                                                    autoFocus
                                                 />
-                                                <p className="mt-1 text-[10px] text-gray-500">*Key disimpan di browser Anda saja.</p>
+                                                <p className="mt-1 text-[10px] text-gray-500">*Key hanya aktif untuk sesi ini (tidak disimpan otomatis).</p>
+                                            </div>
+                                        ) : (
+                                            <div className="flex justify-between items-center bg-green-50 px-3 py-2 rounded-lg border border-green-100 mb-2">
+                                                <div className="flex items-center gap-2">
+                                                    <div className="w-2 h-2 bg-green-500 rounded-full animate-pulse"></div>
+                                                    <span className="text-xs text-green-700 font-medium">API Key Terhubung</span>
+                                                </div>
+                                                <button 
+                                                    onClick={() => setUserApiKey('')}
+                                                    className="text-[10px] text-red-500 hover:text-red-700 hover:underline"
+                                                >
+                                                    Reset Key
+                                                </button>
                                             </div>
                                         )}
 
