--- a/index.html
+++ b/index.html
@@ -105,8 +105,43 @@
                     {
                         subTitle: { id: 'Logo Development', en: 'Logo Development' },
                         items: [
-                            { id: 'b1', name: 'Basic Logo', price: {id: 3000000, en: 450}, features: { id: ['2 Alternatif Logo', '5-7 Hari kerja', '3x Revisi', 'File Master (AI, EPS, PNG)'], en: ['2 Logo alternatives', '5-7 Business days', '3x Revision', 'Master Files (AI, EPS, PNG)'] } },
-                            { id: 'b2', name: 'Pro Branding', price: {id: 5000000, en: 1500}, tag: 'Best Value', features: { id: ['3 Alternatif Logo', 'Stationery Design', 'Social Media Template', 'Brand Guidelines Book'], en: ['3 Logo alternatives', 'Stationery Design', 'Social Media Assets', 'Brand Guidelines Book'] } }
+                            { 
+                                id: 'b1', 
+                                name: 'Package Basic', 
+                                price: {id: 3000000, en: 350}, 
+                                features: { 
+                                    id: ['2 Alternatif Logo', '5-7 Hari Kerja', '3x Revisi (Opsi Terpilih)', 'File Master (AI, EPS, SVG, PNG, JPG)'], 
+                                    en: ['2 Logo alternatives', '5-7 Business days delivery', '3x Revision (Selected alt)', 'File (JPG, PNG, SVG, AI, EPS)'] 
+                                } 
+                            },
+                            { 
+                                id: 'b2', 
+                                name: 'Package Standard', 
+                                price: {id: 3500000, en: 450}, 
+                                features: { 
+                                    id: ['3 Alternatif Logo', '5-7 Hari Kerja', '3x Revisi (Opsi Terpilih)', 'Desain Kartu Nama', 'Desain Kop Surat', 'Brand Guidelines', 'File Master Lengkap'], 
+                                    en: ['3 Logo alternatives', '5-7 Business days delivery', '3x Revision (Selected alt)', 'Business card design', 'Letterhead design', 'Brand guidelines', 'Full Source Files'] 
+                                } 
+                            },
+                            { 
+                                id: 'b3', 
+                                name: 'Package Creative', 
+                                price: {id: 4000000, en: 600}, 
+                                tag: 'Popular', 
+                                features: { 
+                                    id: ['3 Alternatif Logo', '5x Revisi (Opsi Terpilih)', 'Kartu Nama & Kop Surat', 'Desain ID Card / Namecard', 'Brand Guidelines', 'File Master Lengkap'], 
+                                    en: ['3 Logo alternatives', '5x Revision (Selected alt)', 'Business card design', 'Letterhead & Namecard design', 'Brand guidelines', 'Full Source Files'] 
+                                } 
+                            },
+                            { 
+                                id: 'b4', 
+                                name: 'Package Premium', 
+                                price: {id: 5000000, en: 850}, 
+                                features: { 
+                                    id: ['4 Alternatif Logo', '5x Revisi (Opsi Terpilih)', 'Stationery (Kartu Nama, Kop, ID, Lanyard)', 'Template Sosmed', 'Desain Landing Page', 'Brand Guidelines', 'File Master Lengkap'], 
+                                    en: ['4 Logo alternatives', '5x Revision', 'Full Stationery (Card, Letter, ID, Lanyard)', 'Social media template', 'Landing page design', 'Brand guidelines', 'Full Source Files'] 
+                                } 
+                            }
                         ]
                     },
                     {
